*
* 0.2.9
*

- Added built-in scripting language (NXSL - NetXMS Scripting Language)
- Implemented DCI transformations (using NXSL)
- Implemeted auto discovery filters (using NXSL)
- Added startup scripts for Gentoo Linux
- Windows console: agent configuration editor improved
- Fixed issues: #68, #69, #71


*
* 0.2.8
*

- Implemented agent proxy
- Object tools fully implemented (including configuration)
- Added web session manager and very basic web interface
- Added "node capability expiration" feature
- Windows console:
	- Fixed inconsistencies in object access control configuration
	- Now can play sounds when new alarm arrives
	- Added voice notifications for alarms (using SAPI)
- Alarm viewer: 
	- The same audio notification options added
	- Current time display added
- Added support for Windows authentication in Microsoft SQL driver
- Server configuration wizard: added possibility to configure service account
- Added support for transactions in database manager
- Fixed bugs in server's SMTP sender
- Fixed bug in SMS driver
- Fixed issues: #57, #61, #63, #65, #66


*
* 0.2.7
*

- Advanced status calculation mechanism implemented
- Added support for SQLite embedded database engine
- New MIBs added: IEEE 802.11
- PING subagent: added "PacketRate" configuration parameter
- Fixed some portability issues for 64bit platforms
- Fixed build problems with version 0.2.6
- Fixed issues: #53, #55, #59, #60


*
* 0.2.6
*

- Added possibility to change size of ICMP echo request packets sent by server
- Added built-in syslog server
- Implemented retrieving of only last N records from event log
- Implemented "Select DCI" function for templates
- Implemented own MIB compiler, removing last dependency from Net-SNMP library
- MIBs now transferred to client in compiled form, reducing network traffic
  and making console startup faster
- Implemented correct translation of SNMPv1 trap id to SNMPv2 trap id
- Added advanced DCI collection scheduling
- Core agent:
	- Ported to AIX