@@ -406,21 +406,18 @@ src/console/nxav/nxav.dsw -text
 src/console/nxav/nxav.h -text
 src/console/nxav/nxav.rc -text
 src/console/nxav/res/Makefile.am -text
-src/console/nxav/res/SeverityCritical.ico -text
-src/console/nxav/res/SeverityMajor.ico -text
-src/console/nxav/res/SeverityMinor.ico -text
-src/console/nxav/res/SeverityNormal.ico -text
-src/console/nxav/res/SeverityWarning.ico -text
 src/console/nxav/res/ack.png -text
 src/console/nxav/res/background.jpg -text
 src/console/nxav/res/critical.ico -text
 src/console/nxav/res/major.ico -text
 src/console/nxav/res/minor.ico -text
 src/console/nxav/res/normal.ico -text
+src/console/nxav/res/nosound.png -text
 src/console/nxav/res/nxav.ico -text
 src/console/nxav/res/nxav.rc2 -text
 src/console/nxav/res/processing.ico -text
 src/console/nxav/res/small_logo.bmp -text
+src/console/nxav/res/sound.png -text
 src/console/nxav/res/warning.ico -text
 src/console/nxav/resource.h -text
 src/console/nxav/tools.cpp -text
