@@ -384,6 +384,21 @@ Package=<4>
 
 ###############################################################################
 
+Project: "nxlexer"=.\src\console\nxlexer\nxlexer.dsp - Package Owner=<4>
+
+Package=<5>
+{{{
+}}}
+
+Package=<4>
+{{{
+    Begin Project Dependency
+    Project_Dep_Name libnetxms
+    End Project Dependency
+}}}
+
+###############################################################################
+
 Project: "nxmibc"=.\src\nxmibc\nxmibc.dsp - Package Owner=<4>
 
 Package=<5>
