@@ -14,11 +14,6 @@
 #define IDI_PROCESSING                  131
 #define IDB_NETXMS_LOGO                 132
 #define IDM_CONTEXT                     134
-#define IDI_SEVERITY_WARNING            135
-#define IDI_SEVERITY_CRITICAL           136
-#define IDI_SEVERITY_MAJOR              137
-#define IDI_SEVERITY_MINOR              138
-#define IDI_SEVERITY_NORMAL             139
 #define IDC_EDIT_PASSWD                 140
 #define IDF_BACKGROUND                  141
 #define IDF_WARNING                     142
@@ -30,6 +25,8 @@
 #define IDR_SND_ALARM                   149
 #define IDC_EDIT_SERVER_NAME            150
 #define IDD_SETTINGS                    151
+#define IDF_NOSOUND                     153
+#define IDF_SOUND                       154
 #define IDC_INFO_TEXT                   1000
 #define IDC_CHECK_AUTOLOGIN             1001
 #define IDC_STATIC_SERVER               1003
@@ -37,6 +34,7 @@
 #define IDC_STATIC_PASSWORD             1005
 #define IDC_EDIT_USER                   1007
 #define IDC_CONFIGURE_SOUNDS            1008
+#define IDC_CHECK_REPEAT                1009
 #define IDC_RADIO_CLEAR                 1108
 #define IDC_RADIO_BLOWFISH              1109
 #define ID_VIEW_REFRESH                 32771
@@ -50,9 +48,9 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_3D_CONTROLS                     1
-#define _APS_NEXT_RESOURCE_VALUE        152
+#define _APS_NEXT_RESOURCE_VALUE        155
 #define _APS_NEXT_COMMAND_VALUE         32772
-#define _APS_NEXT_CONTROL_VALUE         1009
+#define _APS_NEXT_CONTROL_VALUE         1010
 #define _APS_NEXT_SYMED_VALUE           106
 #endif
 #endif
