@@ -8,3 +8,4 @@ LIBEAY32.DLL
 SSLEAY32.DLL
 LIBINTL-2.DLL
 LIBICONV-2.DLL
+SCILEXER.DLL
